# RustyFuuGBEmu

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml  unit-tests.yml  unit_tests.yml  validation.yml  version.yml
src/: main.rs
src/cartridge/: mbc1.rs  mbc1_test.rs  mock.rs  mod.rs  no_mbc.rs  no_mbc_test.rs  null.rs
src/cpu/: bit.rs  bit_test.rs  cpu.rs  cpu_impl.rs  cpu_impl_test.rs  cpu_test.rs  events.rs  lr35902.rs  lr35902_test.rs  mock.rs  mod.rs  opcode.rs  opcode_ext.rs  opcode_ext_test.rs  opcode_test.rs  operation_impl.rs  operation_impl_test.rs  register.rs  register_impl.rs  register_impl_test.rs  register_test.rs  test.rs  test_utils.rs
src/events/: mod.rs
src/gameboy/: controller.rs  controller_test.rs  gameboy.rs  mod.rs  orchestrator.rs  orchestrator_test.rs
src/gameboy/channel/: back_end.rs  front_end.rs  mod.rs
src/interface/: mock.rs  mod.rs
src/interrupt/: mod.rs
src/joypad/: mod.rs
src/memory/: cartridge.rs  cartridge_test.rs  io_registers.rs  mbc1.rs  mbc1_test.rs  memory.rs  memory_impl.rs  memory_test.rs  mock.rs  mod.rs  no_mbc.rs  no_mbc_test.rs
src/observables/: mod.rs
src/ppu/: color.rs  mod.rs  ppu.rs  ppu_test.rs  sprite.rs  stat.rs
src/renderer/: mod.rs  shaders.rs
src/timers/: mod.rs
src/ui/: controls.rs  events.rs  mod.rs  trace.rs  vram_viewer.rs
