[package]
name = "rusty_fuugbemu"
version = "0.1.0"
edition = "2021"

[features]
serial_debug = []

[dependencies]
bytemuck = "1.14.0"
clap = { version = "4.4.6", features = ["derive"] }
crossbeam = "0.8.2"
egui = { version = "0.20.1", default-features = true }
egui_glium = "0.20.1"
env_logger = "0.10.0"
glium = "0.32.1"
log = "0.4.20"
rfd = "0.12.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
