[package]
name = "rusty_fuugbemu"
version = "0.0.15"
edition = "2021"

[features]
serial_debug = []

[dependencies]
bytemuck = "1.14.0"
clap = { version = "4.4.6", features = ["derive"] }
egui = { version = "0.20.1", default-features = true }
egui_glium = "0.20.1"
env_logger = "0.10.0"
glium = "0.32.1"
image = "0.25.2"
log = "0.4.20"
queues = "1.1.0"
rfd = "0.12.1"
